# CO2-Pipeline-Routing-Tool

./: .dockerignore  .gitignore  .gitignore.swp  CO2PRT.py  Dockerfile  LICENSE  README.md  install_edx_assets.py  makefile  packCO2PRT.spec  package-lock.json  package.json  paper.bib  paper.md  pyinstaller_env.yml  pyproject.toml  route_2024_05_16_13_25_30.shp  route_2024_05_16_13_25_30.shx  setup.txt
Flask/: Index_to_Coordinate_FUNCTIONS.py  TestRun.py  agent.py  agent_abs_path.py  agent_old_02-15-24.py  aquifers_wgs84.shp  base.py  controller.py  convert_weights.ipynb  convert_weights.py  convert_weights_py.py  cost_surface.ipynb  custom-raylib-example.ipynb  end_location.dbf  end_location.shp  end_location.shx  extra_utils.py  grid_world_ray.ipynb  grid_world_shape_file.py  line_builder.py  mc-tutorial-rail.ipynb  mc-tutorial.ipynb  mc_agent.py  post-ml-line.txt  ras_071323_4alpha.tfw  ras_071323_4alpha.tif.aux.xml  ray-grid-world-6.ipynb  report_builder_input.txt  resnet-old.py  result_line.shp  result_line.shx  result_pnt.dbf  result_pnt.shp  result_pnt.shx  result_pre_line.dbf  result_pre_line.shp  result_pre_line.shx  rout.py  route_2024_05_16_13_48_17.shp  route_2024_05_16_13_48_17.shx  (+11 more)
documentation/: README.md
exported_venv/: env.yml
paper/: paper.bib  paper.md
pipeline_sphinx_documentation/: README.md
public/: electron.js  index.html  preload.js  route_2024_06_20_12_51_34.dbf  route_2024_06_20_12_51_34.shp  route_2024_06_20_12_51_34.shx
pyinstaller_hooks/: hook-fiona.py  hook-proj.py
src/: App.js  App.test.js  EvalMode.js  index.css  index.js  (+1 more)
(+115 files in other folders)
